[package]
name = "hex_renderer_javascript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hex_renderer = { git = "https://github.com/JohnDog3112/Hex-Renderer.git" }
serde = { version = "1.0.193", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = "0.2.89"
