[package]
name = "hex_renderer_javascript"
version = "0.1.4"
edition = "2021"
authors = ["JohnDog3112"]
description = "Renderer for patterns in hexcasting (a mod for minecraft)"
license = "MIT"
repository = "https://github.com/JohnDog3112/javascript-hex-renderer"
keywords = ["hexcasting", "hex"]
categories = ["rendering"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hex_renderer = "0.2.4"
serde = { version = "1.0.193", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
tsify = { version = "0.4.5", features = ["js"] }
wasm-bindgen = "0.2.89"
